--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ display: flex;
 flex-direction: row;
 padding-left: 1%;
 }
+.ContainerLow{
+    margin-top: 1%;
+display: flex;
+flex-direction: row;
+padding-left: 1%;
+padding-right: 1%;
+}
+
 
 .BigBlock{
     background-color: #263948;
@@ -42,6 +50,7 @@ padding-left: 1%;
 }
 .LabelButton{
     margin-top: 10%;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.1);
     background-color: #2f4a5d;
     border-radius: 5px;
     margin-left: 5%;
@@ -50,6 +59,7 @@ padding-left: 1%;
 }
 .LabelButtonTitle{
     margin-top: 10%;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.1);
     background-color: #2f4a5d;
     border-radius: 5px;
     color: white;
@@ -100,6 +110,14 @@ padding-left: 1%;
     font-size: 100%;
     margin: 0; /* Remove padding and use margin if necessary */
     white-space: nowrap;
+}
+
+.Block{
+    background-color: #263948;
+   width: 100%;
+    border:3px solid rgb(15, 240, 15);
+    border-radius: 14px; 
+   
 }
 @media screen and (max-width:1198px) {
     .reducedMargin {
